--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,45 @@
   </properties>
 
   <dependencies>
+	 <dependency>
+	    <groupId>com.google.guava</groupId>
+	    <artifactId>guava</artifactId>
+	    <version>18.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.quartz-scheduler</groupId>
+	    <artifactId>quartz</artifactId>
+	    <version>2.2.1</version>
+	</dependency>
+	<dependency>
+		<groupId>dom4j</groupId>
+		<artifactId>dom4j</artifactId>
+		<version>1.6.1</version>
+	</dependency>
+
+	<dependency>
+	  <groupId>log4j</groupId>
+	  <artifactId>log4j</artifactId>
+	  <version>1.2.9</version>
+	</dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
+	<dependency>
+	  <groupId>org.jmock</groupId>
+	  <artifactId>jmock-junit4</artifactId>
+	  <version>2.8.1</version>
+	  <scope>test</scope>
+	</dependency>
+	<dependency> 
+		<groupId>org.dtools</groupId> 
+		<artifactId>javaini</artifactId> 
+		<version>1.1</version> 
+		<scope>system</scope> 
+		<systemPath>${basedir}/lib/org.dtools.javaini-v1.1.00.jar</systemPath> 
+	</dependency>
   </dependencies>
 </project>
