--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -1,6 +1,7 @@
 ### set log levels ###
-log4j.rootLogger = debug,stdout
- 
+log4j.rootLogger=ERROR
+log4j.logger.com.ai.app=DEBUG, stdout
+
 ### \u8F93\u51FA\u5230\u63A7\u5236\u53F0 ###
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
