--- a/agent.properties
+++ b/agent.properties
@@ -14,3 +14,4 @@ aitask.result.save.url = http://localhost:3000/saveResult
 aitask.task.sync.url = http://localhost:3000/tasks
 aitask.task.sync.interval = 300000  
 
+aitask.task.sync.arrange = "arrange"
