1.配置文件结构整理 2.Servlet配置防空捕获 3.property注释过滤

--- a/src/main/resources/client.properties
+++ b/src/main/resources/client.properties
@@ -1,10 +1,10 @@
 aitask.name = android_1
-aitask.sync.url = http://localhost:3000/tasks
+aitask.sync.url = http://10.1.55.14:8002/aiga/service?action=fetchTask&isconvert=true
 aitask.sync.interval = 300000
-aitask.result.save = http://localhost:3000/saveResult
+aitask.result.url = http://10.1.55.14:8002/aiga/service?action=saveResult&isconvert=true
 
-aitask.port = 8888
-aitask.task.arrange = "arrange"
+aitask.client.port = 8888
 
 [servlets]
 com.ai.app.aitask.net.TaskArrangeServlet = /arrange
+com.ai.app.aitask.net.StatusQueryServlet = /status
