任务状态查询

--- a/src/main/resources/client.properties
+++ b/src/main/resources/client.properties
@@ -7,4 +7,6 @@ aitask.client.port = 8888
 
 [servlets]
 com.ai.app.aitask.net.TaskArrangeServlet = /arrange
-com.ai.app.aitask.net.StatusQueryServlet =/status
+com.ai.app.aitask.net.DataQueryServlet = /data
+com.ai.app.aitask.net.StepQueryServlet = /step
+#com.ai.app.aitask.net.StatusQueryServlet =/status
