--- a/src/test/resources/client.properties
+++ b/src/test/resources/client.properties
@@ -8,4 +8,6 @@ aitask.server.port = 9999
 
 [servlets]
 com.ai.app.aitask.net.TaskArrangeServlet = /arrange
-com.ai.app.aitask.net.StatusQueryServlet =/status
+com.ai.app.aitask.net.DataQueryServlet = /data
+com.ai.app.aitask.net.StepQueryServlet = /step
+#com.ai.app.aitask.net.StatusQueryServlet =/status
