1.添加了对任务同步进程延迟的判断，当为非正整数时不进行任务同步。 2.在TaskArrangeServlet中添加了平台主动发起任务的IP

--- a/src/main/resources/client.properties
+++ b/src/main/resources/client.properties
@@ -1,6 +1,9 @@
 aitask.name = android_1
 aitask.sync.url = http://10.1.55.16:8002/aiga/service?action=receivePost&isconvert=true
-aitask.sync.interval = 300000
+
+#set interval <= 0 to stop sync
+aitask.sync.interval = -1
+#aitask.sync.interval = 300000
 aitask.result.url = http://10.1.55.16:8002/aiga/service?action=reciveResult&isconvert=true
 
 aitask.client.port = 8888
