--- a/src/main/resources/client.properties
+++ b/src/main/resources/client.properties
@@ -9,7 +9,7 @@ aitask.result.url = http://10.1.55.16:8002/aiga/service?action=reciveResult&isco
 aitask.client.port = 8888
 
 [servlets]
-com.ai.app.aitask.net.TaskArrangeServlet = /arrange
-com.ai.app.aitask.net.DataQueryServlet = /data
-com.ai.app.aitask.net.StepQueryServlet = /step
+com.ai.app.aitask.net.setvlet.TaskArrangeServlet = /arrange
+com.ai.app.aitask.net.setvlet.DataQueryServlet = /data
+com.ai.app.aitask.net.setvlet.StepQueryServlet = /step
 #com.ai.app.aitask.net.StatusQueryServlet =/status
