--- a/src/test/resources/client.properties
+++ b/src/test/resources/client.properties
@@ -1,7 +1,8 @@
 aitask.name = android_1
 aitask.sync.url = http://localhost:9999/fetchTask
 aitask.sync.interval = 300000
-aitask.result.url = http://localhost:9999/result
+#aitask.result.url = http://localhost:9999/result
+aitask.result.url = http://10.1.55.20:8002/aiga/service?action=reciveResult&isconvert=true
 
 aitask.client.port = 8888
 aitask.server.port = 9999
