--- a/src/test/resources/quartz.properties
+++ b/src/test/resources/quartz.properties
@@ -8,3 +8,8 @@ org.quartz.threadPool.threadsInheritContextClassLoaderOfInitializingThread = tru
 
 org.quartz.jobStore.class = org.quartz.simpl.RAMJobStore
 org.quartz.jobStore.misfireThreshold = 600000
+
+[listeners]
+com.ai.app.aitask.listener.quartz.ScheduleListner = org.quartz.SchedulerListener
+com.ai.app.aitask.listener.quartz.ExecuteListener = org.quartz.JobListener
+com.ai.app.aitask.listener.quartz.TimeoutListener = org.quartz.JobListener
