--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
 			<artifactId>jetty-servlet</artifactId>
 			<version>8.1.19.v20160209</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-net</groupId>
+			<artifactId>commons-net</artifactId>
+			<version>3.4</version>
+			<classifier>ftp</classifier>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
