--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
 			<version>3.4</version>
 			<classifier>ftp</classifier>
 		</dependency>
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc14</artifactId>
+			<version>10.2.0.4.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
