log4j updated to 1.2.12 joblistener configured in quartz.properties

--- a/src/main/resources/quartz.properties
+++ b/src/main/resources/quartz.properties
@@ -9,7 +9,8 @@ org.quartz.threadPool.threadsInheritContextClassLoaderOfInitializingThread = tru
 org.quartz.jobStore.class = org.quartz.simpl.RAMJobStore
 org.quartz.jobStore.misfireThreshold = 600000
 
-[listeners]
-com.ai.app.aitask.listener.quartz.ScheduleListner = org.quartz.SchedulerListener
-com.ai.app.aitask.listener.quartz.ExecuteListener = org.quartz.JobListener
-com.ai.app.aitask.listener.quartz.TimeoutListener = org.quartz.JobListener
+#listeners
+#org.quartz.triggerListener.NAME.propName = propValue
+#org.quartz.triggerListener.NAME.prop2Name = prop2Value
+org.quartz.jobListener.timeout.class = com.ai.app.aitask.listener.quartz.TimeoutListener
+org.quartz.jobListener.execute.class = com.ai.app.aitask.listener.quartz.ExecuteListener
