--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,6 +2,7 @@
 log4j.rootLogger=ERROR
 log4j.logger.com.ai.app=DEBUG, stdout
 
+log4j.logger.org.quartz = ERROR, stdout
 ### \u8F93\u51FA\u5230\u63A7\u5236\u53F0 ###
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
