--- a/src/main/resources/aitask.properties
+++ b/src/main/resources/aitask.properties
@@ -12,3 +12,9 @@ builder.nethall.ini = C:/workspace/aitask/probe/ha_nethall/Logs/一个测试.ini
 builder.nethall.preparer = com.ai.app.aitask.task.preparer.impl.IniDataPreparer
 builder.nethall.executor = com.ai.app.aitask.task.executor.impl.ProcessTaskExecutor
 builder.nethall.fetcher = com.ai.app.aitask.task.fetcher.impl.IniResultFetcher
+
+builder.aiauto.class = com.ai.app.aitask.task.builder.impl.ProcessTaskBuilder
+#builder.aiauto.command = cmd /c python C:/workspace/aitask/aiauto/test.py %scriptname%
+builder.aiauto.command = cmd /c python C:/workspace/aitask/aiauto_ori/test.py
+builder.aiauto.source = C:/workspace/aitask/aiauto/suite.json
+builder.aiauto.source = C:/workspace/aitask/aiauto/%casename%.json
